tests/service_loadbalancer/manifests/service-without-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-without-loadbalancer
  namespace: check-kyverno
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
